--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
                 particle.anchor.set(0.5, 0.5);
                 particle.zIndex = 3;
                 particle.scale.set(0.4);
-                particle.rotateSpeed = Math.random() * 0.01 - (0.005);
+                particle.rotateSpeed = Math.random() * 0.01 - 0.005;
 
                 var radius = 64;
                 var x = this.x + (Math.random() - 0.5) * radius * 2;
