--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@
         PIXI.loader
             .add("ship.png")
             .add("meteor.png")
-            .add("explosion.png")
             .load(setup);
 
         var ship, particles, meteors, stars, explosions;
@@ -230,8 +229,9 @@
             this.y = y;
             this.createdAt = Date.now();
             this.particles = [];
-            this.targetCount = 64;
+            this.targetCount = 128;
             this.rate = 512;
+            this.radius = 64;
             explosions.push(this);
         }
 
@@ -242,25 +242,29 @@
 
                 // rotate particles
                 this.particles[i].rotation += this.particles[i].rotateSpeed;
+
+                // scale down particles
+                this.particles[i].scale.x -= 0.005;
+                this.particles[i].scale.y -= 0.005;
             }
 
             // create particles over time
             var seconds = ( Date.now() - this.createdAt ) / 1000;
             var targetCount = Math.min(this.targetCount, seconds * this.rate);
             while(this.particles.length < targetCount) {
-                var particle = new PIXI.Sprite(PIXI.loader.resources["explosion.png"].texture);
-                particle.anchor.set(0.5, 0.5);
+                var size = 64;
+                var particle = new PIXI.Graphics();
+                particle.beginFill(0xDDDDDD);
+                particle.drawRect(0, 0, size, size);
+                particle.endFill();
+                particle.x = this.x + (Math.random() - 0.5) * this.radius * 2;
+                particle.y = this.y + (Math.random() - 0.5) * this.radius * 2;
+                particle.pivot.set(size/2);
+                particle.rotation = Math.random() * Math.PI * 2;
                 particle.zIndex = 3;
-                particle.scale.set(0.4);
-                particle.rotateSpeed = Math.random() * 0.01 - 0.005;
-
-                var radius = 64;
-                var x = this.x + (Math.random() - 0.5) * radius * 2;
-                var y = this.y + (Math.random() - 0.5) * radius * 2;
-                particle.position.set(x, y);
-
-                this.particles.push(particle);
+                particle.rotateSpeed = Math.random() * 0.04 - 0.02;
                 stage.addChild(particle);
+                this.particles.push(particle);
             }
         }
 
