Make exploision circular

--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
             this.particles = [];
             this.targetCount = 128;
             this.rate = 512;
-            this.radius = 64;
+            this.radius = 80;
             explosions.push(this);
         }
 
@@ -258,10 +258,14 @@
                 particle.beginFill(colors[Math.floor(Math.random() * colors.length)]);
                 particle.drawRect(0, 0, size, size);
                 particle.endFill();
-                particle.x = this.x + (Math.random() - 0.5) * this.radius * 2;
-                particle.y = this.y + (Math.random() - 0.5) * this.radius * 2;
-                particle.pivot.set(size/2);
                 particle.rotation = Math.random() * Math.PI * 2;
+
+                // randomize position
+                var factor = Math.random();
+                particle.x = this.x + Math.cos(particle.rotation) * this.radius * factor;
+                particle.y = this.y + Math.sin(particle.rotation) * this.radius * factor;
+
+                particle.pivot.set(size/2);
                 particle.zIndex = 3;
                 particle.rotateSpeed = Math.random() * 0.04 - 0.02;
                 stage.addChild(particle);
