--- a/index.html
+++ b/index.html
@@ -94,7 +94,9 @@
             // destroy ship if it collides with a meteor
             if(ship) {
                 for(var i=0; i<meteors.length; i++) {
-                    if(hitTestRectangle(ship.sprite, meteors[i].sprite)) {
+                    var distance = Math.sqrt(Math.pow(ship.sprite.x - meteors[i].sprite.x, 2) + Math.pow(ship.sprite.y - meteors[i].sprite.y, 2));
+                    var radius = Math.max(ship.collisionRadius, meteors[i].collisionRadius);
+                    if(distance < radius) {
                                                 
                         // replace meteor with smaller meteors
                         var angle = Math.atan2(meteors[i].sprite.y - ship.sprite.y, meteors[i].sprite.x - ship.sprite.x);
@@ -136,7 +138,8 @@
         function Ship(x, y) {
             this.speed = 4;
             this.vx = 0;
-            this.vy = 0;            
+            this.vy = 0;
+            this.collisionRadius = 64;
 
             this.sprite = new PIXI.Sprite(PIXI.loader.resources["ship.png"].texture);
             this.sprite.anchor.set(0.5, 0.5);
@@ -230,6 +233,7 @@
             this.rotateSpeed = Math.random() * 0.02;
             this.vx = Math.random() * 2;
             this.vy = Math.random() * 2;
+            this.collisionRadius = 64;
 
             this.sprite = new PIXI.Sprite(PIXI.loader.resources["meteor.png"].texture);
             this.sprite.anchor.set(0.5, 0.5);
@@ -292,58 +296,6 @@
                 this.particles.push(particle);
             }
         }
-
-        // https://github.com/kittykatattack/learningPixi#the-hittestrectangle-function
-        function hitTestRectangle(r1, r2) {
-
-            //Define the variables we'll need to calculate
-            var hit, combinedHalfWidths, combinedHalfHeights, vx, vy;
-
-            //hit will determine whether there's a collision
-            hit = false;
-
-            //Find the center points of each sprite
-            r1.centerX = r1.x + r1.width / 2;
-            r1.centerY = r1.y + r1.height / 2;
-            r2.centerX = r2.x + r2.width / 2;
-            r2.centerY = r2.y + r2.height / 2;
-
-            //Find the half-widths and half-heights of each sprite
-            r1.halfWidth = r1.width / 2;
-            r1.halfHeight = r1.height / 2;
-            r2.halfWidth = r2.width / 2;
-            r2.halfHeight = r2.height / 2;
-
-            //Calculate the distance vector between the sprites
-            vx = r1.centerX - r2.centerX;
-            vy = r1.centerY - r2.centerY;
-
-            //Figure out the combined half-widths and half-heights
-            combinedHalfWidths = r1.halfWidth + r2.halfWidth;
-            combinedHalfHeights = r1.halfHeight + r2.halfHeight;
-
-            //Check for a collision on the x axis
-            if (Math.abs(vx) < combinedHalfWidths) {
-
-                //A collision might be occuring. Check for a collision on the y axis
-                if (Math.abs(vy) < combinedHalfHeights) {
-
-                //There's definitely a collision happening
-                hit = true;
-                } else {
-
-                //There's no collision on the y axis
-                hit = false;
-                }
-            } else {
-
-                //There's no collision on the x axis
-                hit = false;
-            }
-
-            //`hit` will be either `true` or `false`
-            return hit;
-        };
 
     </script>
 </body>
